<resources>
    <string name="app_name">Task</string>
    <!-- Status Task -->

    <string name="status_task_todo">A fazer</string>
    <string name="status_task_doing">Fazendo</string>
    <string name="status_task_done">Feitas</string>
    <!-- Generics -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="message"></string>
    <string name="text_title_warning">Atenção</string>
    <string name="text_button_warning">Entendi</string>
    <string name="password_empty">preencha a senha!</string>
    <string name="email_empty">Preencha seu email!</string>

    <!--RegisterFragment -->
    <string name="email_empty_register_fragment">Preencha um e-mail válido.</string>
    <string name="password_empty_register_fragment">Preencha uma senha.</string>
    <string name="description_empty_form_task_fragment">Adicionar Descrição</string>


    <string name="e_mail">E-mail</string>
    <string name="digite_sua_senha">Digite sua senha</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="criar_conta">Criar Conta</string>
    <string name="recuperar_conta">Recuperar Conta</string>
    <string name="digite_seu_e_mail">Digite seu e-mail</string>
    <string name="murilo_gomes_carvalho_g_es">Murilo Gomes Carvalho Góes</string>
    <string name="informe_seu_e_mail_de_cadastro_para_receber_n_um_link_para_altera_o_de_senha">Informe seu e-mail de cadastro para receber \n um link para alteração de senha</string>
    <string name="enviar">Enviar</string>
    <string name="atencao">Atenção</string>
    <string name="mensagem">Mensagem</string>
    <string name="entendi">Entendi</string>
    <string name="nova_tarefa">Nova tarefa</string>
    <string name="descricao">Descrição</string>
    <string name="informe_sua_nova_tarefa">Informe sua nova Tarefa</string>
    <string name="status">Status</string>
    <string name="a_fazer">A Fazer</string>
    <string name="fazendo">Fazendo</string>
    <string name="feito">Feito</string>
    <string name="salvar">Salvar</string>
    <string name="editar">Editar</string>
    <string name="detalhes">Detalhes</string>
    <string name="remover">Remover</string>
    <string name="add_task">Add task</string>
    <string name="tabs">Tabs</string>
    <string name="logout">Logout</string>
    <string name="text_button_dialog_confirm_logout">Confirmar</string>
    <string name="text_title_dialog_comfira_logout">Deseja sair da sua conta?</string>
    <string name="text_message_dialog_confirm_logout">Aperte em confirmar para sair da sua conta</string>
    <string name="text_message_recover_account_fragment">Recuperar Conta</string>
    <string name="text_save_sucess_form_task_fragment">Exito! Tarefa salva com sucesso!</string>
    <string name="error_generic">Erro. Tente novamente!</string>
    <string name="text_list_task_empty">Nenhuma tarefa cadastrada!</string>
    <string name="text_list_task_load">Aguarde, estamos carregando as informações!</string>
    <string name="text_delete_sucess_task"> Tarefa removida com sucesso.</string>
    <string name="text_title_dialog_delete">Deseja remover esta tarefa?</string>
    <string name="text_message_dialog_delete">Aperte em confirmar para remover a tarefa.</string>
    <string name="text_button_dialog_confirm">Confirmar</string>


</resources>