<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.RecoverAccountFragment"
    android:fillViewport="true"
    android:background="@color/color_default">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/LinearLayout1">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="@drawable/icback"
            app:navigationIconTint="@color/white"
            android:paddingTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:text="@string/recuperar_conta"
                android:textColor="@color/white"
                android:layout_gravity="center_horizontal"/>


        </com.google.android.material.appbar.MaterialToolbar>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="25dp">

            <TextView
                android:id="@+id/textViewMensagem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/informe_seu_e_mail_de_cadastro_para_receber_n_um_link_para_altera_o_de_senha"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="24dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/e_mail"
                android:layout_marginTop="24dp"
                android:textColor="@color/white"/>

            <EditText
                android:id="@+id/edt_text_email"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:hint="@string/digite_seu_e_mail"
                android:inputType="textEmailAddress"
                style="@style/EditTextTheme"
                android:layout_marginTop="4dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEnviar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                style="@style/ButtonTheme"
                android:layout_marginTop="16dp" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminateTint="@color/white"
                android:layout_marginTop="8dp"
                android:layout_gravity="center"
                android:visibility="visible"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>